tests/pld-test-output/tests-Init-08-6_testAffExprValArithm/pld-compile.txt
line 3:6 token recognition error at: ','
line 3:8 token recognition error at: ','
line 3:10 token recognition error at: ','
Error in input.c.
Error no viable alternative at input 'int ab'. On position 3:7
   "	int a,b,c,d;"
           ^

1 error generated.

return code: 1
